--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,48 +1,23 @@
 {
   "name": "@shopgate-project/separate-deposit-from-price",
-  "version": "1.0.0",
-  "description": "An awesome extesion for my awesome organization",
+  "version": "1.0.0-rc.1",
+  "description": "Separate Deposit from Price Extension",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "jest",
-    "test:watch": "npm run test -- --watch",
-    "coverage": "jest --coverage",
-    "coverage:watch": "npm run coverage -- --watch"
+    "test": ""
+  },
+  "dependencies": {
+    "glamor": "^2.20.40",
+    "classnames": "^2.2.6"
   },
   "devDependencies": {
     "@shopgate/engage": "^6.11.0",
     "@shopgate/eslint-config": "^6.11.0",
-    "@shopgate/pwa-common": "^6.11.0",
-    "@shopgate/pwa-common-commerce": "^6.11.0",
-    "@shopgate/pwa-core": "^6.11.0",
-    "@shopgate/pwa-unit-test": "^6.11.0",
-    "@shopgate/pwa-ui-ios": "^6.11.0",
-    "@shopgate/pwa-ui-shared": "^6.11.0",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/plugin-transform-spread": "^7.2.2",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.5.5",
-    "@babel/runtime-corejs3": "^7.5.5",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "@hot-loader/react-dom": "^16.8.6",
-    "jest": "^24.9.0",
     "eslint": "~5.12.0",
-    "glamor": "^2.20.40",
-    "prop-types": "^15.6.0",
-    "react": "~16.8.4",
-    "react-dom": "~16.8.4",
-    "react-helmet": "^5.1.3",
-    "react-hot-loader": "4.8.0"  },
+    "prop-types": "^15.7.2",
+    "react": "~16.12.0",
+    "react-dom": "~16.12.0"
+  },
   "peerDependencies": {
     "@shopgate/engage": "^6.11.0"
   }
