--- a/extension/package.json
+++ b/extension/package.json
@@ -4,18 +4,9 @@
   "description": "",
   "license": "Apache-2.0",
   "scripts": {
-    "lint": "eslint --ignore-path ../.gitignore --ignore-path .eslintignore --ext .js ."
+    "standard": "standard"
   },
   "devDependencies": {
-    "bunyan": "^1.8.12",
-    "@types/bunyan": "^1.8.4",
-    "lint-staged": "^6.0.0",
-    "eslint": "^5.13.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "standard": "^10.0.3"
+    "standard": "^14.3.3"
   }
 }
