--- a/extension-config.json
+++ b/extension-config.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "id": "@shopgate-project/separate-deposit-from-price",
   "components": [
     {
@@ -110,7 +110,7 @@
     },
     {
       "path": "extension/steps/adjustCartItems.js",
-      "hooks": ["shopgate.cart.getCart.v1:afterFetchCart"],
+      "hooks": ["shopgate.cart.getCart.v1:after"],
       "input": [
         {
           "key": "cartItems"
