--- a/extension/package.json
+++ b/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopgate-project/separate-deposit-from-price",
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0",
   "description": "",
   "license": "Apache-2.0",
   "scripts": {
